# hashirama_corp_nightingale_p90x

./: .env  .gitignore  Dockerfile  Makefile  flake.nix  readme.org  start.sh
.github/actions/: deploy.yml
.github/workflows/: test.yml
configuration/: home.nix
services/ReactNativeApp/: App.js  app.json  eas.json  package.json  tailwind.config.js
services/apps/ReactNativeApp/: Readme.md  babel.config.js  carbide-sweep-416423-92fe13761459.json  package-lock.json
services/apps/fn/: host.nix
services/apps/hooks/: archive.json  hooks.json
services/apps/reactNative/: app.json  package.json
services/bot-party/: README.md  bun.lockb  index.html  package-lock.json  package.json  start.sh  vite.config.ts
services/bot-party/roomba/: README.md  docking.py  flake.nix  main.py  pyproject.toml  requirements.txt  robot_move.py  start.sh  wtf.sh
services/bot-party/roomba/.virtualenv/: pyvenv.cfg
services/bot-party/roomba/src/roomba/: __init__.py
services/bot-party/src/: App.tsx
services/caddy/: Caddyfile  Caddyfile.json  start.sh
services/fn/: install.sh
services/homelab-status-page/: .air.toml  Modelfile  README.md  Vagrantfile  _main.go  blog.templ  blog_templ.go  config.yml  flake.nix  go.mod  go.sum  gomod2nix.toml  main.go  notes.txt  package-lock.json  package.json  parse.go  robot_move.py  run_air.sh  sendsms.go  tailwind.config.js  tsconfig.json  tui.go
services/hooks/: start.sh
services/planning-prediction/: Untitled.ipynb  playwright-seeds.json  scrape-predictors.json
services/reactNative/: App.js  package-lock.json
(+43 files in other folders)
